# RecFinder

./: .gitignore  LICENSE  README.md  pyproject.toml  recfinder.py  requirements.txt  requirements_dev.txt
ExampleData/: 28_species_of_interest.txt  28_species_rbcL.nuc.aln
ExampleData/RecFinder/Results_Jun13/: Log.txt
ExampleData/RecFinder/Results_Jun13/Real_Phylogeny/: 28_species_rbcL.nuc.parstree
src/recfinder/: __init__.py  _version.py  citation.py  helpinfo.py
src/recfinder/genetic_codes/: codon1.txt  codon11.txt
src/recfinder/rec_analysis/: count_aa_mutations.py  recurrence_analysis.py
src/recfinder/run/: __main__.py  run_commands.py
src/recfinder/utils/: files.py  parallel_task_manager.py  process_args.py  timeit.py  util.py
